# Viettel-Digital-Talent-2023

./: .gitignore  README.md  aio.yaml  docker.logs  playbook-mongo.yaml
1. Containerization/: README.md  docker-compose.yml  dockerfile  index.html  main.css  mongo-init.js  nginx.conf  script.js  sutdentdb.json
1. Containerization/Tran-Duc-Manh/webapp/: .env  Dockerfile  main.py  pyproject.toml
1. Containerization/Tran-Duc-Manh/webapp/core/: config.py  db.py
1. Containerization/Tran-Duc-Manh/webapp/templates/: index.html  profile.html
1. Containerization/Tran-Duc-Manh/webapp/templates/includes/: footer.html  navigation.html
1. Containerization/Tran-Duc-Manh/webapp/templates/layouts/: base-fullscreen.html
10. GK/: README.MD
10.GK/: .gitignores  .~lock.output.docx#  README.md  output.docx
2. Ansible/: .gitignore  README.md  Readme.mkd  demo.pem  host  site.yaml
2.Ansible/: README.md  inventory.yml  setup.yml
2.Ansible-LeTungLam/: README.md  inventories.yaml
2_Ansible/: README.md  secret.yml  setup.yaml
3. Kubernetes/: README.md  api-deployment.yml  db-deployment.yml  kind-cluster.config.yml  webserver-deployment.yml
3. Midterm/: inventory.yml
3_K8s/: README.md  backend.yaml  db.yaml  frontend.yaml
4_Midterm/: README.md
5. Kubernetes/: README.MD  README.md  ansible.cfg  run.yml
5. k8s/: README.md  api-deployment.yaml  backend.yaml  database.yaml  frontend.yaml  mongodb-deployment.yaml  mongodb-pvc.yaml  mongodb-secret.yaml  web-deployment.yaml
GiuaKi_nguyenhuuthang/: docker-compose.yml
K8s/: api-deloyment.yaml  backend.yaml  config.yaml  (+4 more)
(+3315 files in other folders)
